force-app/main/default/objects/User_Object_Settings__c/User_Object_Settings__c.object-meta.xml
<CustomObject>
    <description>It has sObject to user map with its hourly, daily, weekly and monthly no of assignments globally.</description>
    <label>QA User Object Settings</label>
    <nameField>
        <label>User Object Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA User Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>