force-app/main/default/objects/User_Object_Settings__c/fields/Assignment_Quota_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Quota_Hourly__c</fullName>
    <label>Assignment Quota Hourly</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>