force-app/main/default/objects/User_Object_Settings__c/fields/Assignment_Quota_Reset_Time__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Quota_Reset_Time__c</fullName>
    <label>Assignment Quota Reset Time</label>
    <type>DateTime</type>
</CustomField>