force-app/main/default/objects/User_Object_Settings__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>3</length>
    <type>Text</type>
</CustomField>